# rave-sim

./: Cargo.toml  LICENSE  Readme.md  npy-to-hdf5.py  requirements.txt
big-fourier/: Cargo.toml  Changelog.md  Readme.md  bfpy.pyi  pyproject.toml
big-fourier/src/: bfft.rs  chunkmat.rs  katex-header.html  lib.rs
big-fourier/src/npy/: header.rs  mod.rs
big-wave/: Readme.md  config.py  config.yaml  history.py  main.py  multisim.py  optical_element.py  propagation.py  source.py  subconfig.yaml  test.py  util.py  vector.py  visualize.py  wavesim.py
fast-wave/: CMakeLists.txt  Readme.md  main.cpp
fast-wave/fwcuda/: CMakeLists.txt  kernels.cu  kernels.hpp  types.hpp  wrappers.hpp
fast-wave/include/: config_parsing.hpp  optical_element.hpp  simulation.hpp
fast-wave/src/: config_parsing.cpp  fft.cpp  fft.hpp  simulation.cpp
fast-wave/test/: fwtest.cu
nist_lookup/: .gitignore  README.md  setup.py
nist_lookup/nist_lookup/: chemparser.py  materials.py  xraydb.py  xraydb_plugin.py
notebooks/: Crack_simulation.ipynb  Dual_phase_comparison_simulation.ipynb  Error_measured.npy  Sensitivity_measured.npy  Thresholding_Simulation.ipynb  dvis_large_crack_all.npy  dvis_medium_crack_all.npy  dvis_small_crack_all.npy  euler-example.ipynb  spectrum_70_spekpy_filtered_3mmAl.h5  tl3g-usage-example.ipynb
