# Copyright (c) 2024, ETH Zurich

[package]
name = "big-fourier"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bfpy"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
ndarray = "0.15.6"
nom = "3.2.1"
num-complex = { version = "0.4.3", features = ["bytemuck"] }
num-traits = "0.2"
rustfft = "6.1.0"
rustix = { version = "0.38.10", default-features = false, features = ["fs"] }
transpose = "0.2.2"
bytemuck = "1.13.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

# dependencies specific to creating the python wrapper
pyo3 = "0.19.2"
numpy = "0.19.0"

[dev-dependencies]
tempfile = "3"

# Settings after this point are used for profiling with cargo flamegraph

[profile.release]
debug = 1

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
